# artifacts/api-server/src/routes/index.ts
@@ -2,13 +2,11 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import documentsRouter from "./documents";
 import questionsRouter from "./questions";
-import questionSheetsRouter from "./question-sheets";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(documentsRouter);
 router.use(questionsRouter);
-router.use(questionSheetsRouter);
 
 export default router;
